[gd_scene format=3 uid="uid://t3743qo0bahh"]

[ext_resource type="Script" uid="uid://cta422gm8pc15" path="res://Resources/Consumables/consumable_class.gd" id="1_al35h"]
[ext_resource type="PackedScene" uid="uid://tg83lmmkajyp" path="res://Scenes/UI/Tooltips/tooltip_layer.tscn" id="2_7hkb1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltgem"]
size = Vector2(24, 24)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8ml4"]
bg_color = Color(0.688023, 0.596125, 0.233008, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xq8ne"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="BaseConsumable" type="Node2D" unique_id=2007374594]
script = ExtResource("1_al35h")

[node name="ConsumableImage" type="Sprite2D" parent="." unique_id=1697889617]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="." unique_id=1605961477]
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1289698411]
shape = SubResource("RectangleShape2D_ltgem")

[node name="ConsumableUI" type="Control" parent="." unique_id=1542292151]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0

[node name="ShopPanel" type="Panel" parent="ConsumableUI" unique_id=1431148155]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = 6.0
offset_right = -2.0
offset_bottom = 36.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ml4")

[node name="ShopLabel" type="Label" parent="ConsumableUI/ShopPanel" unique_id=1095766151]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="ConsumableUI" unique_id=1566989224]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 31.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="Panel" parent="ConsumableUI/InfoLabel" unique_id=1336351806]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xq8ne")

[node name="TooltipLayer" parent="." unique_id=1878210227 instance=ExtResource("2_7hkb1")]
unique_name_in_owner = true
